@@ -274,6 +274,31 @@ public class FilterList implements Filter {
 
   @Override
   public KeyValue getNextKeyHint(KeyValue currentKV) {
-    return null;
+    KeyValue keyHint = null;
+    for (Filter filter : filters) {
+      KeyValue curKeyHint = filter.getNextKeyHint(currentKV);
+      if (curKeyHint == null && operator == Operator.MUST_PASS_ONE) {
+        // If we ever don't have a hint and this is must-pass-one, then no hint
+        return null;
+      }
+      if (curKeyHint != null) {
+        // If this is the first hint we find, set it
+        if (keyHint == null) {
+          keyHint = curKeyHint;
+          continue;
+        }
+        // There is an existing hint
+        if (operator == Operator.MUST_PASS_ALL &&
+            KeyValue.COMPARATOR.compare(keyHint, curKeyHint) < 0) {
+          // If all conditions must pass, we can keep the max hint
+          keyHint = curKeyHint;
+        } else if (operator == Operator.MUST_PASS_ONE &&
+            KeyValue.COMPARATOR.compare(keyHint, curKeyHint) > 0) {
+          // If any condition can pass, we need to keep the min hint
+          keyHint = curKeyHint;
+        }
+      }
+    }
+    return keyHint;
   }
 }
